[eims] - authentication and signp jwt filter fix